# mononium

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  clippy.toml  deny.toml  nextest.toml
.github/workflows/: ci.yml
configs/: genesis.devnet.json  genesis.localnet.json  genesis.testnet.json  node.devnet.yaml  node.localnet.yaml  node.observer.yaml
docker/: docker-compose.yml  generate-keys.sh
docs/: AGENTS.md  formatting.md
docs/.obsidian/: app.json  workspace.json
docs/architecture/: ADR-001-workspace-structure.md  ADR-002-validator-election.md  ADR-003-block-production.md  ADR-004-finality.md  ADR-005-token-supply.md  ADR-006-transaction-fees.md  ADR-007-database.md  ADR-008-p2p-networking.md  ADR-009-serialization.md  ADR-010-address-format.md  ADR-011-mempool-ordering.md  ADR-012-rpc-protocol.md  ADR-013-cli-framework.md  ADR-014-eras.md  ADR-015-genesis-distribution.md  ADR-016-cryptographic-signature-scheme.md  ADR-017-slashing-freeze.md  ADR-018-sync-batch-hash.md  ADR-019-crate-selection-crypto.md  AGENTS.md
docs/plans/: AGENTS.md  GRILL.md  Versioning.md
docs/plans/.obsidian/: workspace.json
docs/plans/V0.0.0/: Architecture.md  Consensus.md  Cryptography.md  Mainflow.md  Network.md  Philosophy.md  Protocol.md  Roadmap.md  Storage.md  Validators.md
docs/plans/V0.1.0/: Architecture.md  Consensus.md  Cryptography.md  Mainflow.md  Network.md  Philosophy.md  Protocol.md  Roadmap.md  Storage.md  Validators.md
docs/plans/V0.2.0/: Architecture.md  Consensus.md  Cryptography.md  Mainflow.md  Network.md  Philosophy.md  Protocol.md  Roadmap.md  Storage.md  Testing.md  Validators.md
docs/plans/V0.3.0/: Architecture.md  Consensus.md  Cryptography.md  Mainflow.md  Network.md  Philosophy.md  Protocol.md  Roadmap.md  Storage.md  Testing.md  Validators.md
docs/plans/V0.4.0/: Architecture.md  Consensus.md  Cryptography.md  Mainflow.md  Network.md  Philosophy.md  Protocol.md  Roadmap.md  Storage.md  Testing.md  Validators.md
docs/plans/V0.5.0/: Architecture.md  Consensus.md  Cryptography.md  Fees.md  Genesis.md  Mainflow.md  Mempool.md  Network.md  Philosophy.md  Protocol.md  Roadmap.md  Slashing.md  Storage.md  Testing.md  Validators.md
docs/plans/V0.6.0/: Architecture.md  Consensus.md  Cryptography.md  Fees.md  Genesis.md  Governance.md  Mainflow.md  Mempool.md  Network.md  NodeConfig.md  Philosophy.md  Protocol.md  Roadmap.md  Slashing.md  StateSharding.md  Storage.md  Testing.md  Validators.md
docs/plans/V0.7.0/: Architecture.md  Consensus.md  Cryptography.md  Fees.md  Genesis.md  Governance.md  LightClient.md  Mainflow.md  Mempool.md  Network.md  Philosophy.md  Protocol.md  Roadmap.md  Slashing.md  StateSharding.md  Storage.md  Testing.md  Validators.md
docs/plans/V0.8.0/: Architecture.md  Consensus.md  Cryptography.md  Genesis.md  Governance.md  LightClient.md  Mainflow.md  Mempool.md  Network.md  NodeConfig.md  Philosophy.md  Protocol.md  Slashing.md  StateSharding.md  Storage.md  Testing.md  UserDocs.md
docs/plans/V1.0.0/: Architecture.md  Consensus.md  Cryptography.md  Fees.md  Genesis.md  Mainflow.md  Mempool.md  Network.md  Philosophy.md  Protocol.md  Roadmap.md  Slashing.md  Storage.md  Testing.md  Validators.md
scripts/: profile.sh  sample-to-folded.awk
src/: main.rs
src/mononium-cli/: Cargo.toml
src/mononium-cli/src/: main.rs  node.rs  wallet.rs
src/mononium-cli/tests/: e2e.rs
src/mononium-lib/: Cargo.toml
src/mononium-lib/benches/: consensus.rs  crypto.rs  network.rs  state.rs  storage.rs
src/mononium-lib/src/: constants.rs  error.rs  lib.rs
src/mononium-lib/src/config/: constants.rs  mod.rs
src/mononium-lib/src/consensus/: election.rs  engine.rs  era.rs  finality.rs  fork_choice.rs  mod.rs  proposer.rs  slashing.rs  supply.rs
src/mononium-lib/src/core/: account.rs  block.rs  constants.rs  fee.rs  mod.rs  state.rs  transaction.rs  validator.rs
src/mononium-lib/src/crypto/: address.rs  constants.rs  falcon.rs  hash.rs  mod.rs  signature.rs  trie.rs
src/mononium-lib/src/governance/: constants.rs  engine.rs  mod.rs  types.rs
src/mononium-lib/src/mempool/: mod.rs  ordering.rs
src/mononium-lib/src/network/: constants.rs  messages.rs  mod.rs  peer_score.rs  sync.rs  sync_protocol.rs  topics.rs
src/mononium-lib/src/rpc/: config.rs  mod.rs  server.rs  state.rs
src/mononium-lib/src/storage/: genesis.rs  mod.rs  redb.rs  tables.rs
src/mononium-lib/src/tests/: mod.rs
src/mononium-lib/src/tests/core/: account.rs  mod.rs
src/mononium-lib/tests/: cluster.rs
src/mononium-rust-lib/: Cargo.toml
src/mononium-rust-lib/src/: lib.rs
user_docs/: Devnet.md  README.md
