[package]
name = "mononium-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
mononium-lib = { path = "../mononium-lib" }

# CLI
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true

[lints]
workspace = true
