[package]
name = "mononium-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
mononium-lib = { path = "../mononium-lib" }

# CLI
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
hex = "0.4"
parity-scale-codec = { workspace = true, features = ["derive"] }
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "blocking"] }
primitive-types = { workspace = true }

# HTTP/REST
axum.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
